--- a/dbt_dwh/Makefile
+++ b/dbt_dwh/Makefile
@@ -9,10 +9,10 @@ DB_USER = postgres
 DB_HOST = localhost
 DB_PORT = 5432
 
-.PHONY: all setup venv docker-up enable_pgcrypto load-data dbt-run dbt-test run-analyses dbt-docs
+.PHONY: all setup venv docker-up enable_pgcrypto load-data dbt-deps dbt-run dbt-test run-analyses dbt-docs
 
 # 1. Full setup in order
-all: venv setup docker-up enable_pgcrypto load-data dbt-run dbt-test run-analyses dbt-docs
+all: venv setup docker-up enable_pgcrypto load-data dbt-deps dbt-run dbt-test run-analyses dbt-docs
 
 # 2. Create virtual environment with Python 3.9.6
 venv:
@@ -39,17 +39,22 @@ load-data:
 	@echo "Loading data into Postgres"
 	$(PYTHON) scripts/convert_and_load.py
 
-# 6. Run dbt models with explicit profiles directory
+# 6. Run dbt deps
+dbt-deps:
+	@echo "Running dbt deps"
+	DBT_PROFILES_DIR=$(DBT_PROFILES_DIR) $(VENV_DIR)/bin/dbt deps
+
+# 7. Run dbt models with explicit profiles directory
 dbt-run:
 	@echo "Running dbt models"
 	DBT_PROFILES_DIR=$(DBT_PROFILES_DIR) $(VENV_DIR)/bin/dbt run
 
-# 7. Run dbt tests with explicit profiles directory
+# 8. Run dbt tests with explicit profiles directory
 dbt-test:
 	@echo "Running dbt tests"
 	DBT_PROFILES_DIR=$(DBT_PROFILES_DIR) $(VENV_DIR)/bin/dbt test
 
-# 8. Run the analyses on postgres
+# 9. Run the analyses on postgres
 run-analyses:
 	@echo "Running analysis queries..."
 	@for sql_file in $(shell find target/compiled/dbt_dwh/analyses -name '*.sql'); do \
@@ -57,7 +62,7 @@ run-analyses:
 		PGPASSWORD=postgres psql -h localhost -U postgres -d dwh -f $$sql_file || exit 1; \
 	done
 
-# 9. Serve dbt docs with explicit profiles directory
+# 10. Serve dbt docs with explicit profiles directory
 dbt-docs:
 	DBT_PROFILES_DIR=$(DBT_PROFILES_DIR) $(VENV_DIR)/bin/dbt docs generate
 	DBT_PROFILES_DIR=$(DBT_PROFILES_DIR) $(VENV_DIR)/bin/dbt docs serve --port 8001
